// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with onSelect prop render 0 assigned 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          0 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Translate(MemberOptionsMenu) />
  </Flex>
</Card>
`;

exports[`with onSelect prop render 0 uncontacted 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
      </Flex>
    </Flex>
    <Translate(MemberOptionsMenu) />
  </Flex>
</Card>
`;

exports[`with onSelect prop render for user created org 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Translate(MemberOptionsMenu) />
  </Flex>
</Card>
`;

exports[`with onSelect prop render member 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Translate(MemberOptionsMenu) />
  </Flex>
</Card>
`;

exports[`without onSelect prop renders 1`] = `
<Card
  onPress={[Function]}
>
  <Flex
    direction="row"
    justify="center"
    style={
      Object {
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
      }
    }
  >
    <Flex
      direction="column"
      value={1}
    >
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#007398",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        FULL NAME
      </MyText>
      <Flex
        align="center"
        direction="row"
        style={
          Object {
            "marginTop": 1,
          }
        }
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#B2B0B2",
              "fontSize": 14,
            }
          }
        >
          5 Assigned
        </MyText>
        <React.Fragment>
          <Dot
            style={
              Object {
                "color": "#B2B0B2",
                "fontSize": 14,
              }
            }
          />
          <MyText
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FF5532",
                "fontSize": 14,
              }
            }
          >
            3 Uncontacted
          </MyText>
        </React.Fragment>
      </Flex>
    </Flex>
    <Translate(MemberOptionsMenu) />
  </Flex>
</Card>
`;
